# Drf_p37

./: .env  TODO  pyproject.toml
apps/: admin.py  filters.py  paginations.py  permissions.py  serializer.py  urls.py  views.py
apps/fixtures/: albums.json  comments.json  photos.json  posts.json  todos.json  users.json
apps/migrations/: 0001_initial.py  0002_remove_post_tags_tag_posts.py  0003_tag_slug.py  0004_alter_tag_slug_product_favorite.py  0005_alter_post_content_alter_product_description.py
apps/models/: __init__.py  managers.py  posts.py  users.py
root/: settings.py  urls.py
