[project]
name = "drf-p37"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "django>=6.0.4",
    "django-ckeditor-5>=0.2.20",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djangorestframework-stubs>=3.16.9",
    "drf-spectacular>=0.29.0",
    "pathlib>=1.0.1",
    "pillow>=12.2.0",
    "psycopg>=3.3.3",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.2.2",
]
